tests/kulezi_tests/bad/dup_ident05.lat
class A {
    int x;
    int x;
}

int main() {

}
